database/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-postgres
  template:
    metadata:
      labels:
        app: my-postgres
    spec:
      volumes:
        - name: database-pv
          persistentVolumeClaim:
            claimName: database-pvc
      containers:
      - image: my-postgres:local
        imagePullPolicy: Never
        name: database
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data/pgdata"
          name: database-pv
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
status: {}
