database/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: my-postgres
  name: my-postgres
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: my-postgres
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
